<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt28"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textColor="#0000ff"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt29"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:textColor="#0000ff"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/lineplot"
        android:text="@string/txt30"
        android:background="#f0f0ff"
        android:textColor="#ff0000"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/barplot"
        android:text="@string/txt31"
        android:background="#f0f0ff"
        android:textColor="#ff00ff"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/pieplot"
        android:text="@string/txt32"
        android:background="#f0f0ff"
        android:textColor="#0C9214"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/thoat"
        android:text="@string/txt33"
        android:background="#f0f0ff"
        android:textColor="#002Aff"/>
</LinearLayout>