<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt34"
        android:textColor="#0000ff"
        android:textSize="20sp"
        android:paddingTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt35"
            android:layout_weight="1"
            android:textColor="#0000ff"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
        <EditText
            android:id="@+id/sodiem"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="#ffffaa"
            android:hint="@string/txt36"
            android:inputType="number"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="20sp" tools:targetApi="o" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt37"
            android:id="@+id/btnnhap"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#040480"
        android:textStyle="bold"
        android:text="@string/txt38" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableRow>
        <EditText
            android:id="@+id/edtx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:visibility="invisible"
            android:labelFor="@id/edtx1"/>
    <EditText
        android:id="@+id/edtx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:labelFor="@id/edtx2"/>
    <EditText
        android:id="@+id/edtx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:labelFor="@id/edtx3"/>
        <EditText
            android:id="@+id/edtx4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edtx4"/>
        <EditText
            android:id="@+id/edtx5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edtx5"/>
        <EditText
            android:id="@+id/edtx6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edtx6"/>
        <EditText
            android:id="@+id/edtx7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edtx7"/>
        <EditText
            android:id="@+id/edtx8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edtx8"/>
        <EditText
            android:id="@+id/edtx9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edtx9"/>
        <EditText
            android:id="@+id/edtx10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edtx10"/>
    </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#040480"
        android:textStyle="bold"
        android:text="@string/txt39" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableRow>
    <EditText
        android:id="@+id/edty1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:labelFor="@id/edty1"/>
        <EditText
            android:id="@+id/edty2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty2"/>
        <EditText
            android:id="@+id/edty3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty3"/>
        <EditText
            android:id="@+id/edty4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty4"/>
        <EditText
            android:id="@+id/edty5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty5"/>
        <EditText
            android:id="@+id/edty6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty6"/>
        <EditText
            android:id="@+id/edty7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty7"/>
        <EditText
            android:id="@+id/edty8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty8"/>
        <EditText
            android:id="@+id/edty9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty9"/>
        <EditText
            android:id="@+id/edty10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:labelFor="@id/edty10"/>
    </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ve"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt40" />
        <Button
            android:id="@+id/trove"
            style="@android:style/Widget.Material.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt41" />
    </LinearLayout>
</LinearLayout>