<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#0d09de">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imagebuttoncot"
            android:src="@mipmap/back1"
            android:background="#0d09de"
            android:contentDescription="@string/todo"
            android:layout_marginStart="5dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/th_c_t"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:background="#ffffbb33"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/th_c_t"
            android:layout_marginTop="2dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="#da0909"
            android:id="@+id/textviewtenduong1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="#ff33b5e5"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/todo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text8"
            android:layout_marginTop="2dp"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="#da0909"
            android:id="@+id/textviewtenduong2"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/BarChartMpAndroid"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">
    </com.github.mikephil.charting.charts.BarChart>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texViewBar"
        android:textColor="#da0909"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textSize="15sp"/>

</LinearLayout>